--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,1 @@
-custom: [https://uahelp.monobank.ua/, https://savelife.in.ua/en/donate/, https://armysos.com.ua/en/help-the-army, https://www.paypal.com/donate/?hosted_button_id=YRD22ASKSG7U8]
-#patreon: savelife.in.ua
+custom: https://uahelp.monobank.ua/, https://savelife.in.ua/en/donate/, https://www.paypal.com/donate/?hosted_button_id=YRD22ASKSG7U8
