--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: https://uahelp.monobank.ua/, https://savelife.in.ua/en/donate/, https://www.paypal.com/donate/?hosted_button_id=YRD22ASKSG7U8
+custom: ["https://uahelp.monobank.ua/", "https://savelife.in.ua/en/donate/", "https://www.paypal.com/donate/?hosted_button_id=YRD22ASKSG7U8"]
